--- a/index.html
+++ b/index.html
@@ -31,12 +31,33 @@
     </style>
   </head>
   <body>
-    Sedans Choose a sedan for its affordability and excellent fuel economy.
-    Ideal for cruising in the city or on your next road trip. SUVs Take an SUV
-    for its spacious interior, power, and versatility. Perfect for your next
-    family vacation and off-road adventures. Luxury Cruise in the best car
-    brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-    rental and arrive in style.
+    <div class="container">
+      <div class="container__box container__box--orange">
+        <h1>Sedans</h1>
+        <p>
+          Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip. 
+        </p>
+      </div>
+    </div>
+    
+    <div class="container">
+      <div class="container__box container__box--orange">
+        <h1>SUVs</h1>
+        <p>
+          Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.
+        </p>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="container__box container__box--orange">
+        <h1>Luxury</h1>
+        <p>
+          Luxury Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.
+        </p>
+      </div>
+    </div>
+      
 
     <div class="attribution">
       Challenge by
