Fixed font error and major changes in files

--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
     />
     <link rel="stylesheet" href="./styles/components.css" />
     <link rel="stylesheet" href="./styles/elements.css" />
-    <link rel="stylesheet" href="./styles/generic.css" />
-    <link rel="stylesheet" href="./styles/settings.css" />
-    <link rel="stylesheet" href="./styles/tools.css" />
-    <link rel="stylesheet" href="./styles/trumps.css" />
     <title>Frontend Mentor | 3-column preview card component</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -55,7 +51,7 @@
     </div>
       
 
-    <div class="attribution">
+    <div class="attribution" style="display: none;">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
