--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="./styles/components.css" />
     <link rel="stylesheet" href="./styles/elements.css" />
+    <link rel="stylesheet" href="./styles/trumps.css" />
     <title>Frontend Mentor | 3-column preview card component</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -29,21 +30,21 @@
   <body>
     <div class="container">
       <div class="container__box container__box--orange">
-        <h1>Sedans</h1>
+        <h1>SEDANS</h1>
         <p>
           Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip. 
         </p>
       </div>
     
-      <div class="container__box container__box--orange">
-        <h1>SUVs</h1>
+      <div class="container__box container__box--cyan">
+        <h1>SUVS</h1>
         <p>
           Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.
         </p>
       </div>
 
-      <div class="container__box container__box--orange">
-        <h1>Luxury</h1>
+      <div class="container__box container__box--dark-cyan">
+        <h1>LUXURY</h1>
         <p>
           Luxury Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.
         </p>
