--- a/index.html
+++ b/index.html
@@ -30,24 +30,30 @@
   <body>
     <div class="container">
       <div class="container__box container__box--orange">
+        <img class="container__image" src="images/icon-sedans.svg">
         <h1>SEDANS</h1>
         <p>
           Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip. 
         </p>
+        <button class="container__button">Learn More</button>
       </div>
     
       <div class="container__box container__box--cyan">
+        <img class="container__image" src="images/icon-suvs.svg">
         <h1>SUVS</h1>
         <p>
           Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.
         </p>
+        <button class="container__button">Learn More</button>
       </div>
 
       <div class="container__box container__box--dark-cyan">
+        <img class="container__image" src="images/icon-luxury.svg">
         <h1>LUXURY</h1>
         <p>
           Luxury Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.
         </p>
+        <button class="container__button">Learn More</button>
       </div>
     </div>
       
