compressed/updated/deleted files

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./styles/components.css" />
-    <link rel="stylesheet" href="./styles/elements.css" />
-    <link rel="stylesheet" href="./styles/trumps.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
     <title>Frontend Mentor | 3-column preview card component</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
